@@ -37,14 +37,12 @@ import java.nio.file.FileSystem;
 import java.nio.file.FileSystems;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.wso2.ballerinalang.util.LambdaExceptionUtils.rethrow;
@@ -56,7 +54,7 @@ import static org.wso2.ballerinalang.util.LambdaExceptionUtils.rethrow;
  */
 public class FileSystemProgramDirectory implements SourceDirectory {
     private final Path programDirPath;
-    private static PrintStream outStream = System.out;
+    private static final PrintStream OUT_STREAM = System.out;
 
     public FileSystemProgramDirectory(Path programDirPath) {
         this.programDirPath = programDirPath;
@@ -83,7 +81,7 @@ public class FileSystemProgramDirectory implements SourceDirectory {
                 fileNames = stream.map(ProjectDirs::getLastComp)
                         .filter(ProjectDirs::isSourceFile)
                         .map(Path::toString)
-                        .collect(Collectors.toList());
+                        .toList();
             }
             return fileNames;
         } catch (SecurityException | AccessDeniedException e) {
@@ -112,9 +110,9 @@ public class FileSystemProgramDirectory implements SourceDirectory {
     public Path saveCompiledProgram(InputStream source, String fileName) {
         // When building a single bal file the executable (balx) should be generated in the current directory of
         // the user
-        Path targetFilePath = Paths.get(fileName);
+        Path targetFilePath = Path.of(fileName);
         try {
-            outStream.println("    " + fileName);
+            OUT_STREAM.println("    " + fileName);
             Files.copy(source, targetFilePath, StandardCopyOption.REPLACE_EXISTING);
             return targetFilePath;
         } catch (DirectoryNotEmptyException e) {
@@ -174,15 +172,9 @@ public class FileSystemProgramDirectory implements SourceDirectory {
     }
 
     private String getTopLevelDirNameInPackage(CompilerOutputEntry.Kind kind, FileSystem fs) {
-        switch (kind) {
-            case SRC:
-            case BIR:
-            case OBJ:
-                return kind.getValue();
-            case ROOT:
-                return fs.getSeparator();
-
-        }
-        return null;
+        return switch (kind) {
+            case SRC, BIR, OBJ -> kind.getValue();
+            case ROOT -> fs.getSeparator();
+        };
     }
 }
