@@ -56,7 +56,6 @@ import java.util.ArrayList;
 import java.util.Collections;
 import java.util.LinkedHashSet;
 import java.util.List;
-import java.util.stream.Collectors;
 
 import static io.ballerina.runtime.api.constants.RuntimeConstants.UNDERSCORE;
 
@@ -78,8 +77,8 @@ public class ServiceDesugar {
     private final SymbolTable symTable;
     private final SymbolResolver symResolver;
     private final Names names;
-    private DeclarativeAuthDesugar declarativeAuthDesugar;
-    private TransactionDesugar transactionDesugar;
+    private final DeclarativeAuthDesugar declarativeAuthDesugar;
+    private final TransactionDesugar transactionDesugar;
     private final Types types;
 
     public static ServiceDesugar getInstance(CompilerContext context) {
@@ -292,8 +291,7 @@ public class ServiceDesugar {
     }
 
     void engageCustomServiceDesugar(BLangService service, SymbolEnv env) {
-        List<BType> expressionTypes = service.attachedExprs.stream().map(expression -> expression.getBType())
-                .collect(Collectors.toList());
+        List<BType> expressionTypes = service.attachedExprs.stream().map(expression -> expression.getBType()).toList();
         service.serviceClass.functions.stream()
                 .filter(fun -> Symbols.isResource(fun.symbol) || Symbols.isRemote(fun.symbol))
                 .forEach(func -> engageCustomResourceDesugar(func, env, expressionTypes));
