@@ -4,7 +4,6 @@ import org.ballerinalang.compiler.CompilerPhase;
 import org.wso2.ballerinalang.compiler.util.ProjectDirConstants;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 /**
  * Calculate path pattens for project and home cache.
@@ -12,6 +11,6 @@ import java.nio.file.Paths;
 public class CacheRepo extends BinaryRepo {
 
     public CacheRepo(Path path, String cacheName, CompilerPhase compilerPhase) {
-        super(path, Paths.get(ProjectDirConstants.CACHES_DIR_NAME, cacheName), compilerPhase);
+        super(path, Path.of(ProjectDirConstants.CACHES_DIR_NAME, cacheName), compilerPhase);
     }
 }
