@@ -32,7 +32,6 @@ import org.testng.annotations.Test;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 
 /**
@@ -57,7 +56,7 @@ public class FormattingTest {
         DocumentFormattingParams documentFormattingParams = new DocumentFormattingParams();
 
         TextDocumentIdentifier textDocumentIdentifier1 = new TextDocumentIdentifier();
-        textDocumentIdentifier1.setUri(Paths.get(inputFilePath.toString()).toUri().toString());
+        textDocumentIdentifier1.setUri(Path.of(inputFilePath.toString()).toUri().toString());
 
         FormattingOptions formattingOptions = new FormattingOptions();
         formattingOptions.setInsertSpaces(true);
@@ -71,7 +70,7 @@ public class FormattingTest {
         String result = TestUtil.getFormattingResponse(documentFormattingParams, this.serviceEndpoint);
         Gson gson = new Gson();
         ResponseMessage responseMessage = gson.fromJson(result, ResponseMessage.class);
-        String actual = (String) ((LinkedTreeMap) ((List) responseMessage.getResult()).get(0)).get("newText");
+        String actual = (String) ((LinkedTreeMap<?, ?>) ((List<?>) responseMessage.getResult()).get(0)).get("newText");
         actual = actual.replaceAll("\\r\\n", "\n");
         TestUtil.closeDocument(this.serviceEndpoint, inputFilePath);
         Assert.assertEquals(actual, expected);
@@ -89,7 +88,7 @@ public class FormattingTest {
         DocumentFormattingParams documentFormattingParams = new DocumentFormattingParams();
 
         TextDocumentIdentifier textDocumentIdentifier1 = new TextDocumentIdentifier();
-        textDocumentIdentifier1.setUri(Paths.get(inputFilePath.toString()).toUri().toString());
+        textDocumentIdentifier1.setUri(Path.of(inputFilePath.toString()).toUri().toString());
 
         FormattingOptions formattingOptions = new FormattingOptions();
 
@@ -101,14 +100,14 @@ public class FormattingTest {
         String result = TestUtil.getFormattingResponse(documentFormattingParams, this.serviceEndpoint);
         Gson gson = new Gson();
         ResponseMessage responseMessage = gson.fromJson(result, ResponseMessage.class);
-        String actual = (String) ((LinkedTreeMap) ((List) responseMessage.getResult()).get(0)).get("newText");
+        String actual = (String) ((LinkedTreeMap<?, ?>) ((List<?>) responseMessage.getResult()).get(0)).get("newText");
         actual = actual.replaceAll("\\r\\n", "\n");
         TestUtil.closeDocument(this.serviceEndpoint, inputFilePath);
         Assert.assertEquals(actual, expected);
     }
 
     @AfterClass
-    public void shutdownLanguageServer() throws IOException {
+    public void shutdownLanguageServer() {
         TestUtil.shutdownLanguageServer(this.serviceEndpoint);
     }
 }
