@@ -57,7 +57,6 @@ import java.lang.reflect.Method;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
 import java.util.ArrayList;
@@ -85,7 +84,7 @@ import static io.ballerina.runtime.api.creators.TypeCreator.createErrorType;
  * @since 2.0.0
  */
 @SuppressWarnings("unused")
-public class DebuggerRuntime {
+public final class DebuggerRuntime {
 
     private static final String EVALUATOR_STRAND_NAME = "evaluator-strand";
     private static final String XML_STEP_SEPARATOR = "/";
@@ -113,7 +112,7 @@ public class DebuggerRuntime {
             final Object[] finalResult = new Object[1];
             final Object[] paramValues = args[0] instanceof Strand ? Arrays.copyOfRange(args, 1, args.length) : args;
 
-            Function<?, ?> func = o -> bObject.call((Strand) (((Object[]) o)[0]), methodName, paramValues);
+            Function<Object[], ?> func = o -> bObject.call((Strand) ((o)[0]), methodName, paramValues);
             Object resultFuture = scheduler.schedule(new Object[1], func, null, new Callback() {
                 @Override
                 public void notifySuccess(Object result) {
@@ -262,8 +261,8 @@ public class DebuggerRuntime {
                     "found '" + typedescValue.toString() + "'."));
         }
         Type type = ((TypedescValue) typedescValue).getDescribingType();
-        if (type instanceof BAnnotatableType) {
-            return ((BAnnotatableType) type).getAnnotations().entrySet()
+        if (type instanceof BAnnotatableType bAnnotatableType) {
+            return bAnnotatableType.getAnnotations().entrySet()
                     .stream()
                     .filter(annotationEntry -> annotationEntry.getKey().getValue().endsWith(annotationName))
                     .findFirst()
@@ -295,8 +294,8 @@ public class DebuggerRuntime {
             return "int";
         } else if (value instanceof Float || value instanceof Double) {
             return "float";
-        } else if (value instanceof BValue) {
-            return ((BValue) value).getType().getName();
+        } else if (value instanceof BValue bValue) {
+            return bValue.getType().getName();
         } else {
             return "unknown";
         }
@@ -395,7 +394,7 @@ public class DebuggerRuntime {
             functionArgs.add(null);
             functionArgs.addAll(Arrays.asList(userArgs));
 
-            URL pathUrl = Paths.get(executablePath).toUri().toURL();
+            URL pathUrl = Path.of(executablePath).toUri().toURL();
             URLClassLoader classLoader = AccessController.doPrivileged((PrivilegedAction<URLClassLoader>) () ->
                     new URLClassLoader(new URL[]{pathUrl}, ClassLoader.getSystemClassLoader()));
 
@@ -439,8 +438,8 @@ public class DebuggerRuntime {
      * @param args        Arguments to provide.
      * @return The result of the invocation.
      */
-    protected static Object invokeMethodDirectly(ClassLoader classLoader, String className, String methodName,
-                                                 Class<?>[] argTypes, Object[] args) throws Exception {
+    private static Object invokeMethodDirectly(ClassLoader classLoader, String className, String methodName,
+                                               Class<?>[] argTypes, Object[] args) throws Exception {
         Class<?> clazz = classLoader.loadClass(className);
         Method method = clazz.getDeclaredMethod(methodName, argTypes);
         return method.invoke(null, args);
