@@ -22,7 +22,6 @@ import org.testng.annotations.Test;
 
 import java.io.IOException;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 /**
  * Test formatting with a local configuration file.
@@ -30,6 +29,7 @@ import java.nio.file.Paths;
  * @since  2201.9.0
  */
 public class LocalConfigurationTest extends FormatterTest {
+    @Override
     @Test(dataProvider = "test-file-provider")
     public void test(String source, String sourcePath) throws IOException {
         try {
@@ -53,7 +53,7 @@ public class LocalConfigurationTest extends FormatterTest {
     }
     @Override
     public String getTestResourceDir() {
-        Path path = Paths.get("configurations", "local");
+        Path path = Path.of("configurations", "local");
         return path.toString();
     }
 }
