@@ -79,7 +79,6 @@ import java.io.InputStream;
 import java.io.PrintStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
@@ -116,7 +115,7 @@ import static org.testng.Assert.assertTrue;
  * @since 2.0.0
  */
 public class TestBuildProject extends BaseTest {
-    private static final Path RESOURCE_DIRECTORY = Paths.get("src/test/resources/");
+    private static final Path RESOURCE_DIRECTORY = Path.of("src/test/resources/");
     private static Path tempResourceDir;
     static final PrintStream OUT = System.out;
     private final String dummyContent = "function foo() {\n}";
@@ -186,7 +185,7 @@ public class TestBuildProject extends BaseTest {
         JBallerinaBackend jBallerinaBackend = JBallerinaBackend.from(packageCompilation, JvmTarget.JAVA_17);
         Assert.assertEquals(jBallerinaBackend.diagnosticResult().errorCount(), 1);
 
-        EmitResult emitResult = jBallerinaBackend.emit(JBallerinaBackend.OutputType.EXEC, Paths.get("test.jar"));
+        EmitResult emitResult = jBallerinaBackend.emit(JBallerinaBackend.OutputType.EXEC, Path.of("test.jar"));
         Assert.assertFalse(emitResult.successful());
 
         emitResult = jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, projectPath);
@@ -293,16 +292,16 @@ public class TestBuildProject extends BaseTest {
         Assert.assertEquals(jBallerinaBackend.diagnosticResult().diagnosticCount(), 12);
 
         List<String> expectedPaths = Arrays.asList(
-                Paths.get("modules").resolve("utils").resolve("utils.bal").toString(),
-                Paths.get("modules").resolve("storage").resolve("db.bal").toString(),
-                Paths.get("modules").resolve("services").resolve("svc.bal").toString(),
-                Paths.get("modules").resolve("services").resolve("tests").resolve("svc_tests.bal").toString(),
-                Paths.get("tests").resolve("main_tests.bal").toString(),
+                Path.of("modules").resolve("utils").resolve("utils.bal").toString(),
+                Path.of("modules").resolve("storage").resolve("db.bal").toString(),
+                Path.of("modules").resolve("services").resolve("svc.bal").toString(),
+                Path.of("modules").resolve("services").resolve("tests").resolve("svc_tests.bal").toString(),
+                Path.of("tests").resolve("main_tests.bal").toString(),
                 "main.bal", "utils.bal");
 
         // Verify paths in packageCompilation diagnostics
         List<String> diagnosticFilePaths = compilation.diagnosticResult().diagnostics().stream().map(diagnostic ->
-                diagnostic.location().lineRange().fileName()).distinct().collect(Collectors.toList());
+                diagnostic.location().lineRange().fileName()).distinct().toList();
 
         for (String path : expectedPaths) {
             Assert.assertTrue(diagnosticFilePaths.contains(path), diagnosticFilePaths.toString());
@@ -1385,7 +1384,7 @@ public class TestBuildProject extends BaseTest {
         Assert.assertEquals(diagnosticResult.diagnosticCount(), 1);
 
         Assert.assertEquals(diagnosticResult.diagnostics().stream().findAny().get().location().lineRange().fileName(),
-                Paths.get("modules").resolve("schema").resolve("schema.bal").toString());
+                Path.of("modules").resolve("schema").resolve("schema.bal").toString());
         Assert.assertTrue(diagnosticResult.diagnostics().stream().findAny().get().message()
                 .contains("unknown type 'PersonalDetails'"));
     }
@@ -1707,17 +1706,18 @@ public class TestBuildProject extends BaseTest {
         Path execPath = buildProject.sourceRoot().resolve(TARGET_DIR_NAME).resolve("temp.jar");
         jBallerinaBackend.emit(JBallerinaBackend.OutputType.EXEC, execPath);
 
-        JarFile execJar = new JarFile(execPath.toString());
-        String resourceName = RESOURCE_DIR_NAME + "/asmaj-project-info.properties";
-        String depResourceName = RESOURCE_DIR_NAME + "/project-info.properties";
+        try (JarFile execJar = new JarFile(execPath.toString())) {
+            String resourceName = RESOURCE_DIR_NAME + "/asmaj-project-info.properties";
+            String depResourceName = RESOURCE_DIR_NAME + "/project-info.properties";
 
-        Assert.assertNotNull(execJar.getJarEntry(resourceName));
-        try (InputStream inputStream = execJar.getInputStream(execJar.getJarEntry(resourceName))) {
-            Assert.assertTrue(new String(inputStream.readAllBytes()).contains("asmaj"));
-        }
-        Assert.assertNotNull(execJar.getJarEntry(depResourceName));
-        try (InputStream inputStream = execJar.getInputStream(execJar.getJarEntry(depResourceName))) {
-            Assert.assertTrue(new String(inputStream.readAllBytes()).contains("samjs"));
+            Assert.assertNotNull(execJar.getJarEntry(resourceName));
+            try (InputStream inputStream = execJar.getInputStream(execJar.getJarEntry(resourceName))) {
+                Assert.assertTrue(new String(inputStream.readAllBytes()).contains("asmaj"));
+            }
+            Assert.assertNotNull(execJar.getJarEntry(depResourceName));
+            try (InputStream inputStream = execJar.getInputStream(execJar.getJarEntry(depResourceName))) {
+                Assert.assertTrue(new String(inputStream.readAllBytes()).contains("samjs"));
+            }
         }
     }
 
@@ -1746,59 +1746,63 @@ public class TestBuildProject extends BaseTest {
         jBallerinaBackend.emit(JBallerinaBackend.OutputType.EXEC, execPath);
 
         // 4. Verify the existence of resources in thin jar, testable jar and executable jar
-        JarFile execJar = new JarFile(execPath.toString());
+        try (JarFile execJar = new JarFile(execPath.toString())) {
 
-        for (ModuleId moduleId : buildProject.currentPackage().moduleIds()) {
-            Module module = buildProject.currentPackage().module(moduleId);
-            Path moduleJarPath = buildProject.sourceRoot().resolve(TARGET_DIR_NAME).resolve(CACHES_DIR_NAME)
+            for (ModuleId moduleId : buildProject.currentPackage().moduleIds()) {
+                Module module = buildProject.currentPackage().module(moduleId);
+                Path moduleJarPath = buildProject.sourceRoot().resolve(TARGET_DIR_NAME).resolve(CACHES_DIR_NAME)
                     .resolve(module.descriptor().org().toString())
                     .resolve(module.descriptor().packageName().toString())
                     .resolve(module.descriptor().version().toString()).resolve("java17")
                     .resolve(module.descriptor().org().toString() + "-" + module.descriptor().name().toString() + "-"
-                            + module.descriptor().version().toString() + ".jar");
-            JarFile jar = new JarFile(moduleJarPath.toString());
-            for (String name : getResources(buildProject.currentPackage().module(moduleId))) {
-                Assert.assertNotNull(jar.getJarEntry(name));
-                Assert.assertNotNull(execJar.getJarEntry(name));
-            }
-
-            Path testableJarPath = buildProject.sourceRoot().resolve(TARGET_DIR_NAME).resolve(CACHES_DIR_NAME)
-                    .resolve(module.descriptor().org().toString())
-                    .resolve(module.descriptor().packageName().toString())
-                    .resolve(module.descriptor().version().toString()).resolve("java17")
-                    .resolve(module.descriptor().org().toString() + "-" + module.descriptor().name().toString() + "-"
-                            + module.descriptor().version().toString() + "-testable.jar");
-            if (Files.exists(testableJarPath)) {
-                JarFile testableJar = new JarFile(testableJarPath.toString());
-                for (String name : getResources(buildProject.currentPackage().module(moduleId))) {
-                    Assert.assertNotNull(testableJar.getJarEntry(name));
-                }
-                for (String name : getTestResources(buildProject.currentPackage().module(moduleId))) {
-                    Assert.assertNotNull(testableJar.getJarEntry(name));
+                        + module.descriptor().version().toString() + ".jar");
+                try (JarFile jar = new JarFile(moduleJarPath.toString())) {
+                    for (String name : getResources(buildProject.currentPackage().module(moduleId))) {
+                        Assert.assertNotNull(jar.getJarEntry(name));
+                        Assert.assertNotNull(execJar.getJarEntry(name));
+                    }
                 }
 
+                Path testableJarPath = buildProject.sourceRoot().resolve(TARGET_DIR_NAME).resolve(CACHES_DIR_NAME)
+                        .resolve(module.descriptor().org().toString())
+                        .resolve(module.descriptor().packageName().toString())
+                        .resolve(module.descriptor().version().toString()).resolve("java17")
+                        .resolve(module.descriptor().org().toString() + "-"
+                                + module.descriptor().name().toString() + "-"
+                                + module.descriptor().version().toString() + "-testable.jar");
+                if (Files.exists(testableJarPath)) {
+                    try (JarFile testableJar = new JarFile(testableJarPath.toString())) {
+                        for (String name : getResources(buildProject.currentPackage().module(moduleId))) {
+                            Assert.assertNotNull(testableJar.getJarEntry(name));
+                        }
+                        for (String name : getTestResources(buildProject.currentPackage().module(moduleId))) {
+                            Assert.assertNotNull(testableJar.getJarEntry(name));
+                        }
+                    }
+                }
             }
-        }
 
-        // Assert resources of dependencies
-        for (ResolvedPackageDependency resolvedPackageDependency :
+
+            // Assert resources of dependencies
+            for (ResolvedPackageDependency resolvedPackageDependency :
                 buildProject.currentPackage().getResolution().dependencyGraph().toTopologicallySortedList()) {
-            Package depPackage = resolvedPackageDependency.packageInstance();
-            for (ModuleId moduleId : depPackage.moduleIds()) {
-                for (String name : getResources(depPackage.module(moduleId))) {
-                    Assert.assertNotNull(execJar.getJarEntry(name));
+                Package depPackage = resolvedPackageDependency.packageInstance();
+                for (ModuleId moduleId : depPackage.moduleIds()) {
+                    for (String name : getResources(depPackage.module(moduleId))) {
+                        Assert.assertNotNull(execJar.getJarEntry(name));
+                    }
                 }
+
             }
-
         }
-
         Path balaPath = buildProject.sourceRoot().resolve(TARGET_DIR_NAME);
         jBallerinaBackend.emit(JBallerinaBackend.OutputType.BALA, balaPath);
-        JarFile bala = new JarFile(balaPath.resolve("sameera-myproject-any-0.1.0.bala").toString());
+        try (JarFile bala = new JarFile(balaPath.resolve("sameera-myproject-any-0.1.0.bala").toString())) {
 
-        for (ModuleId moduleId : buildProject.currentPackage().moduleIds()) {
-            for (String name : getResourcesInBala(buildProject.currentPackage().module(moduleId))) {
-                Assert.assertNotNull(bala.getJarEntry(name));
+            for (ModuleId moduleId : buildProject.currentPackage().moduleIds()) {
+                for (String name : getResourcesInBala(buildProject.currentPackage().module(moduleId))) {
+                    Assert.assertNotNull(bala.getJarEntry(name));
+                }
             }
         }
     }
@@ -2250,17 +2254,17 @@ public class TestBuildProject extends BaseTest {
         PackageCompilation compilation = currentPackage.getCompilation();
 
         List<String> actualDiagnosticPaths = compilation.diagnosticResult().diagnostics().stream().map(diagnostic ->
-                diagnostic.location().lineRange().fileName()).distinct().collect(Collectors.toList());
+                diagnostic.location().lineRange().fileName()).distinct().toList();
 
         List<String> expectedDiagnosticPaths = Arrays.asList(
-                "main.bal", Paths.get("tests").resolve("main_test.bal").toString(),
-                Paths.get("tests").resolve("utils_test.bal").toString(), "utils.bal",
-                Paths.get("modules").resolve("services").resolve("auth.bal").toString(),
-                Paths.get("modules").resolve("services").resolve("subscribe.bal").toString(),
-                Paths.get("modules").resolve("services").resolve("update.bal").toString(),
-                Paths.get("modules").resolve("storage").resolve("db.bal").toString(),
-                Paths.get("modules").resolve("storage").resolve("tests").resolve("db_test.bal").toString(),
-                Paths.get("modules").resolve("utils").resolve("utils.bal").toString());
+                "main.bal", Path.of("tests").resolve("main_test.bal").toString(),
+                Path.of("tests").resolve("utils_test.bal").toString(), "utils.bal",
+                Path.of("modules").resolve("services").resolve("auth.bal").toString(),
+                Path.of("modules").resolve("services").resolve("subscribe.bal").toString(),
+                Path.of("modules").resolve("services").resolve("update.bal").toString(),
+                Path.of("modules").resolve("storage").resolve("db.bal").toString(),
+                Path.of("modules").resolve("storage").resolve("tests").resolve("db_test.bal").toString(),
+                Path.of("modules").resolve("utils").resolve("utils.bal").toString());
 
         assertEquals(actualDiagnosticPaths.size(), 10);
         assertEquals(actualDiagnosticPaths, expectedDiagnosticPaths);
@@ -2278,7 +2282,7 @@ public class TestBuildProject extends BaseTest {
     public void testConflictingJars() {
         Path dep1Path = tempResourceDir.resolve("conflicting_jars_test/platformLibPkg1").toAbsolutePath();
         Path dep2Path = tempResourceDir.resolve("conflicting_jars_test/platformLibPkg2").toAbsolutePath();
-        Path customUserHome = Paths.get("build", "userHome");
+        Path customUserHome = Path.of("build", "userHome");
         Environment environment = EnvironmentBuilder.getBuilder().setUserHome(customUserHome).build();
         ProjectEnvironmentBuilder envBuilder = ProjectEnvironmentBuilder.getBuilder(environment);
 
@@ -2324,7 +2328,7 @@ public class TestBuildProject extends BaseTest {
                 CENTRAL_CACHE.resolve("bala/ballerina/platformLibPkg2/0.1.0/java17/platform/java17/lib4.txt"),
                 PlatformLibraryScope.DEFAULT)));
         Assert.assertTrue(jarLibraries.contains(new JarLibrary(
-                Paths.get("src/test/resources/conflicting_jars_test/platformLibPkg3/" +
+                Path.of("src/test/resources/conflicting_jars_test/platformLibPkg3/" +
                         "target/cache/user/platformLibPkg3/0.1.0/java17/user-platformLibPkg3-0.1.0.jar"),
                 PlatformLibraryScope.DEFAULT)));
         Assert.assertTrue(jarLibraries.contains(new JarLibrary(
@@ -2344,7 +2348,7 @@ public class TestBuildProject extends BaseTest {
     @Test (description = "tests platform dependency resolution with provided scope for build project")
     public void testProvidedScopeJars() {
         Path dep1Path = tempResourceDir.resolve("provided_jars_tests/jars_provided/pkg_a").toAbsolutePath();
-        Path customUserHome = Paths.get("build", "userHome");
+        Path customUserHome = Path.of("build", "userHome");
         Environment environment = EnvironmentBuilder.getBuilder().setUserHome(customUserHome).build();
         ProjectEnvironmentBuilder envBuilder = ProjectEnvironmentBuilder.getBuilder(environment);
 
@@ -2376,7 +2380,7 @@ public class TestBuildProject extends BaseTest {
     @Test (description = "tests platform dependency resolution with missing 'provided' jars for build project")
     public void testMissingProvidedScopeJars() {
         Path dep1Path = tempResourceDir.resolve("provided_jars_tests/jars_not_provided/pkg_a").toAbsolutePath();
-        Path customUserHome = Paths.get("build", "userHome");
+        Path customUserHome = Path.of("build", "userHome");
         Environment environment = EnvironmentBuilder.getBuilder().setUserHome(customUserHome).build();
         ProjectEnvironmentBuilder envBuilder = ProjectEnvironmentBuilder.getBuilder(environment);
 
@@ -2394,7 +2398,7 @@ public class TestBuildProject extends BaseTest {
             if (jBallerinaBackend.diagnosticResult().hasErrors()) {
                 Assert.fail("unexpected compilation failure:\n" + getErrorsAsString(compilation.diagnosticResult()));
             }
-            jBallerinaBackend.emit(JBallerinaBackend.OutputType.EXEC, Paths.get("test.jar"));
+            jBallerinaBackend.emit(JBallerinaBackend.OutputType.EXEC, Path.of("test.jar"));
         } catch (ProjectException e) {
             Assert.assertEquals(e.getMessage(), "cannot resolve 'com.example:project1:1.0'. Dependencies with " +
                     "'provided' scope need to be manually added to Ballerina.toml.");
@@ -2407,7 +2411,7 @@ public class TestBuildProject extends BaseTest {
     public void testConflictingJarsInNonBalPackages() {
         Path dep1Path = tempResourceDir.resolve("conflicting_jars_test/platformLibNonBalPkg1").toAbsolutePath();
         Path dep2Path = tempResourceDir.resolve("conflicting_jars_test/platformLibNonBalPkg2").toAbsolutePath();
-        Path customUserHome = Paths.get("build", "userHome");
+        Path customUserHome = Path.of("build", "userHome");
         Environment environment = EnvironmentBuilder.getBuilder().setUserHome(customUserHome).build();
         ProjectEnvironmentBuilder envBuilder = ProjectEnvironmentBuilder.getBuilder(environment);
 
@@ -2430,7 +2434,7 @@ public class TestBuildProject extends BaseTest {
             Assert.fail("unexpected compilation failure:\n" + getErrorsAsString(compilation.diagnosticResult()));
         }
 
-        EmitResult emitResult = jBallerinaBackend.emit(JBallerinaBackend.OutputType.EXEC, Paths.get("test.jar"));
+        EmitResult emitResult = jBallerinaBackend.emit(JBallerinaBackend.OutputType.EXEC, Path.of("test.jar"));
 
         Assert.assertFalse(emitResult.diagnostics().hasErrors());
         Assert.assertTrue(emitResult.diagnostics().hasWarnings());
