@@ -20,14 +20,17 @@ package org.ballerinalang.testerina.test.utils;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
+import java.util.stream.Stream;
 
 import static java.nio.file.StandardCopyOption.REPLACE_EXISTING;
 
 /**
  * Util class for file operations.
  */
-public class FileUtils {
+public final class FileUtils {
+
+    private FileUtils() {
+    }
 
     /**
      * Recursively copy a directory from a source to destination.
@@ -37,7 +40,9 @@ public class FileUtils {
      * @throws IOException thrown when as error occurs when copying from src to dest
      */
     public static void copyFolder(Path src, Path dest) throws IOException {
-        Files.walk(src).forEach(source -> copy(source, dest.resolve(src.relativize(source))));
+        try (Stream<Path> paths = Files.walk(src)) {
+            paths.forEach(source -> copy(source, dest.resolve(src.relativize(source))));
+        }
     }
 
     private static void copy(Path source, Path dest) {
@@ -72,7 +77,7 @@ public class FileUtils {
                 .resolve("coverage").resolve("ballerina.exec");
         if (execPath.toFile().exists()) {
             Files.copy(execPath,
-                    Paths.get(System.getProperty("user.dir")).resolve("build").resolve("jacoco").resolve(
+                    Path.of(System.getProperty("user.dir"), "build", "jacoco",
                             packagePath.getFileName().toString() + suffix + ".exec"));
 
         }
